# magstype

./: README.md  README.rst  pyproject.toml
magstype/: __init__.py  game.kv  game.py  letter.py  wordgame.kv  wordgame.py
tests/: test_magstype.py
