[tool.poetry]
name = "magstype"
version = "0.1.0"
description = "Magstype - An introduction to keyboards for small humans"
authors = ["Jack Bradach <jack@bradach.net>"]

[tool.poetry.dependencies]
python = "^3.6"
wheel = "^0.34.2"
scipy = "^1.4.1"
numpy = "^1.18.1"
PySDL2 = "^0.9.7"
pygments = "^2.5.2"
pillow = "^7.0.0"
ffpyplayer = "^4.3.0"
kivy = "^1.11.1"
pyttsx3 = "^2.81"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
letter = "magstype.letter:main"
words = "magstype.wordgame:main"
game = "magstype.game:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

