[tool.poetry]
name = "magstype"
version = "0.1.0"
description = "Magstype - An introduction to keyboards for small humans"
authors = ["Jack Bradach <jack@bradach.net>"]

[tool.poetry.dependencies]
python = "^3.7"
wheel = "^0.34.2"
gstreamer-player = "^1.1.2"
kivy = "^1.11.1"
pyttsx3 = "^2.81"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
letter = "magstype.letter:main"
words = "magstype.wordgame:main"
game = "magstype.game:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

